--- a/platforms/wp8/hambayo.csproj
+++ b/platforms/wp8/hambayo.csproj
@@ -226,4 +226,7 @@
     <ItemGroup>
         <Compile Include="Plugins\org.apache.cordova.inappbrowser\InAppBrowser.cs" />
     </ItemGroup>
+    <ItemGroup>
+        <Compile Include="Plugins\org.apache.cordova.network-information\NetworkStatus.cs" />
+    </ItemGroup>
 </Project>
